sass/_main.scss
@import "variables";

:root {
  font-size: calc(1rem + 0.05vw);
  line-height: 1.54;
  color: var(--color);
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  font-family: ui-monospace, monospace;
  background-color: var(--background);
  // text-shadow: 0 0 3px currentcolor;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.3;

  &:not(:first-child) {
    margin-top: 40px;
  }

  .zola-anchor {
    font-size: .75em;
    visibility: hidden;
    margin-left: .5rem;
    vertical-align: 1%;
    text-decoration: none;
    border-bottom-color: transparent;
    cursor: pointer;
    color: var(--accent);

    @media (hover: none){
      visibility: visible;
    }
  }

  &:hover {
    .zola-anchor {
      visibility: visible;
    }
  }
}

h1 {
  font-size: 1.4em;
}

h2 {
  font-size: 1.3em;
}

h3 {
  font-size: 1.1em;
}

h4, h5, h6 {
  font-size: 1.05em;
}

:is(h1, h2, h3, h4, h5, h6) {
  color: var(--accent);

  &:has(+ p > small) {
    margin-bottom: .5rem;
  }

  & + p:has(> small) {
    margin-top: 0;
  }

  & + p > small {
    color: var(--accent-alpha-70);
  }
}

a {
  color: inherit;

  &:hover {
    color: var(--accent);
    text-shadow: 0 0 .25em currentcolor;
  };
}

img {
  display: block;
  max-width: 100%;
}

p {
  margin-bottom: 20px;
}

code {
  font-family: ui-monospace, monospace;
  background: var(--accent-alpha-20);
  color: var(--accent);
  padding: 1px 6px;
  margin: 0 2px;
  font-size: .95em;
  hyphens: none;
}

pre {
  font-family: ui-monospace, monospace;
  padding: 20px 10px;
  font-size: .95em;
  overflow: auto;
  border-top: 1px solid rgba(255, 255, 255, .1);
  border-bottom: 1px solid rgba(255, 255, 255, .1);
  position: relative;

  + pre {
    border-top: 0;
    margin-top: -40px;
  }

  @media (max-width: $phone-max-width) {
    white-space: pre-wrap;
    word-wrap: break-word;
  }

  &[data-lang]::before {
    content: attr(data-lang);
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    padding: .2em .5em;
    font-weight: bold;
    font-size: .95em;
    border-radius: 0 0 0 6px;
    background-color: var(--accent-alpha-20);
  }

  code {
    background: none !important;
    margin: 0;
    padding: 0;
    font-size: inherit;
    border: none;
  }
}

blockquote {
  border-top: 1px solid var(--accent);
  border-bottom: 1px solid var(--accent);
  margin: 40px 0;
  padding: 25px;

  @media (max-width: $phone-max-width) {
    padding-right: 0;
  }

  > :first-child {
    margin-top: 0;
    position: relative;

    &:before {
      content: '>';
      display: block;
      position: absolute;
      left: -25px;
      top: .1em;
      color: var(--accent);
    }
  }

  > :last-child {
    margin-bottom: 0;
  }
}

table {
  border-collapse: collapse;
  width: 100%;
  margin: 40px 0;
}

table, th, td {
  border: 1px dashed var(--accent);
  padding: 10px;
}

th {
  font-size: .9em;
  color: var(--accent);
}

ul, ol {
  margin-left: 30px;
  padding: 0;

  li {
    padding-left: 1em;
    margin-top: 5px;
    margin-bottom: 5px;
  }

  @media (max-width: $phone-max-width) {
    margin-left: 20px;
  }

  ul, ol {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

.container {
  display: flex;
  flex-direction: column;
  padding: 40px;
  max-width: 864px;
  min-height: 100vh;
  border-right: 1px solid rgba(255, 255, 255, 0.1);

  &.full,
  &.center {
    border: none;
    margin: 0 auto;
  }

  &.full {
    max-width: 100%;
  }

  @media (max-width: $phone-max-width) {
    padding: 20px;
  }
}

.content {
  display: flex;
  flex-direction: column;
}

hr {
  width: 100%;
  border: none;
  background: var(--border-color);
  height: 1px;
}

ol {
  counter-reset: li;
  list-style: none;

  li {
    counter-increment: li;

    // Todo change it to ::marker when Safari will support it
    &::before {
      margin-left: -2rem;
      content: counters(li, ".") ". ";
    }
  }
}

